--- a/pug/index.pug
+++ b/pug/index.pug
@@ -36,6 +36,7 @@ block content
                                                 a.oragne-btn(href='#') купить
                                 div.swiper-button-prev.collection-swiper-btn.collection-swiper-prev
                                 div.swiper-button-next.collection-swiper-btn.collection-swiper-next
+                                div.swiper-pagination.collection-swiper-pagination
                         div.collection-banner-nav
                             div.collection-banner-item.collection-banner-first
                                 div.collection-banner-bg(style="background-image:url('img/banner2.jpg')")
@@ -89,9 +90,9 @@ block content
                 div.main-products-content
                     div.main-products-tabs
                         ul.products-tabs-caption
-                            li.active Лучшие предложения недели
-                            li Новинки
-                            li Рекомендуем
+                            li.tabs-caption-item.active Лучшие предложения недели
+                            li.tabs-caption-item Новинки
+                            li.tabs-caption-item Рекомендуем
                         div.products-tabs-grid
                             div.products-tabs-item.active
                                 div.swiper-container.products-tabs-swiper
