--- a/pug/modules/header.pug
+++ b/pug/modules/header.pug
@@ -3,8 +3,13 @@ header
         div.container
             div.header-content
                 div.header-left
+                    div.header-burger
+                        div.burger
+                            span
                     div.header-catalog
-                        a(href="#") каталог
+                        a#full-catalog(href="#")
+                            span каталог
+                            span.full-catalog-arrow
                     div.header-menu
                         ul
                             li
