--- a/pug/templates/main.pug
+++ b/pug/templates/main.pug
@@ -13,10 +13,12 @@ html
         link(rel="shortcut icon" href="" type="image/ico")
 
         link(rel="stylesheet" type="text/css" href="css/swiper.min.css")
+        link(rel="stylesheet" type="text/css" href="css/OverlayScrollbars.min.css")
         link(rel="stylesheet" type="text/css" href="dist/style.css")
 
         script(type="text/javascript" src="js/jquery-3.3.1.min.js")
         script(type="text/javascript" src="js/swiper.min.js")
+        script(type="text/javascript" src="js/jquery.overlayScrollbars.min.js")
         script(type="text/javascript" src="dist/main.js")
 
     body
