--- a/scss/main.sass
+++ b/scss/main.sass
@@ -212,7 +212,7 @@ footer
 
 .oragne-btn
   display: inline-block
-  padding: 16px 25px
+  padding: 11px 25px
   min-width: 160px
   min-height: 46px
   text-align: center
@@ -224,19 +224,25 @@ footer
   transition: all 0.3s ease
   cursor: pointer
 
-  &:hover
-    background: rgba(255,255,255,0)
-
 .collection-swiper-btn
   display: block
   width: 50px
   height: 50px
   border-radius: 50%
-  border: 3px solid #5b523a
-  background: rgba(255,255,255,0.8) url("../icons/arrow-right-brown.svg") no-repeat center
-  background-size: 37px
-  transition: all 0.3s ease-in-out
+  background: rgba(255,255,255,0)
   cursor: pointer
+
+  &::before
+    content: ''
+    display: block
+    width: 100%
+    height: 100%
+    background: rgba(255,255,255,0.8) url("../icons/arrow-right-brown.svg") no-repeat center
+    background-size: 37px
+    border-radius: 50%
+    border: 3px solid #5b523a
+    transition: all .4s ease
+    box-sizing: border-box
 
   &::after
     display: none
@@ -376,46 +382,52 @@ footer
   margin-bottom: 60px
 
 .products-tabs-caption
-  display: flex
-  align-items: center
-  justify-content: flex-start
   margin-bottom: 30px
   padding-right: 150px
 
-  li
-    font-size: 36px
-    color: $black
-    position: relative
-    padding-bottom: 2px
-    cursor: pointer
-    transition: all 0.2s ease-in-out
+  .os-content
+    display: flex
+    align-items: center
+    justify-content: flex-start
+    white-space: nowrap
 
-    &:not(:last-child)
-      margin-right: 55px
+  .os-scrollbar.os-scrollbar-vertical, .os-scrollbar.os-scrollbar-horizontal
+    display: none
 
-    &::before, &::after
-      content: ''
-      display: block
-      width: 0
-      height: 2px
-      background: $orange
-      position: absolute
-      bottom: 0
-      opacity: 0
-      transition: opacity 0.2s ease-in-out, width 0.4s ease-in-out
+.tabs-caption-item
+  font-size: 36px
+  color: $black
+  position: relative
+  padding-bottom: 2px
+  cursor: pointer
+  transition: all 0.2s ease-in-out
 
-    &::after
-      right: 0
+  &:not(:last-child)
+    margin-right: 55px
 
-    &::before
-      left: 0
+  &::before, &::after
+    content: ''
+    display: block
+    width: 0
+    height: 2px
+    background: $orange
+    position: absolute
+    bottom: 0
+    opacity: 0
+    transition: opacity 0.2s ease-in-out, width 0.4s ease-in-out
 
-    &.active
-      color: $orange
+  &::after
+    right: 0
 
-      &::after, &::before
-        opacity: 1
-        width: 100%
+  &::before
+    left: 0
+
+  &.active
+    color: $orange
+
+    &::after, &::before
+      opacity: 1
+      width: 100%
 
 .products-card-photo
   width: 100%
@@ -579,12 +591,10 @@ footer
   right: 0
   width: 37px
   height: 10px
-  background: url("../icons/arrow-right-black.svg") no-repeat center
-  background-size: contain
   top: 0
   margin-top: 0
   display: inline-block
-  transition: all 0.3s ease-in-out
+
 
   &.products-swiper-prev
     transform: rotate(-180deg)
@@ -592,6 +602,19 @@ footer
 
   &::after
     display: none
+
+  &::before
+    content: ''
+    display: block
+    width: 100%
+    height: 100%
+    box-sizing: border-box
+    background: url("../icons/arrow-right-black.svg") no-repeat center
+    background-size: contain
+    transition: all 0.4s ease
+
+
+
 
 
 
@@ -646,7 +669,7 @@ footer
 
 .products-characteristics-row
   display: flex
-  align-items: center
+  align-items: stretch
   justify-content: space-between
   border-left: 1px solid $white
   border-right: 1px solid $white
@@ -662,9 +685,12 @@ footer
   font-family: $ff_CS
   font-size: 16px
   font-weight: 300
+  display: flex
+  align-items: center
+  justify-content: flex-start
 
   &:nth-child(2n)
-    text-align: right
+    justify-content: flex-end
     color: $white
     border-left: 1px solid $white
 
@@ -685,6 +711,87 @@ footer
     transform: translate3d(0, 0, 0)
 
 
+#full-catalog
+  display: flex
+  justify-content: space-between
+  align-items: center
+  width: 160px
+  height: 46px
+  color: #fefefe
+  padding-left: 29px
+  padding-right: 21px
+  font-size: 18px
+  text-transform: uppercase
+  background: $orange
+  border: 3px solid $white
+  transition: all 0.3s ease
+  cursor: pointer
+
+  .full-catalog-arrow
+    width: 10px
+    height: 17px
+    background: url("../icons/arrow-down.svg") no-repeat center
+    background-size: contain
+    display: inline-block
+
+
+.header-catalog
+  padding-right: 40px
+
+.header-burger
+  display: none
+
+.burger
+  width: 30px
+  height: 20px
+  position: relative
+  cursor: pointer
+
+  span
+    display: block
+    width: 100%
+    height: 2px
+    background: $black
+    position: absolute
+    left: 0
+    top: 0
+    right: 0
+    bottom: 0
+    margin: auto
+
+    &::before, &::after
+      content: ''
+      display: block
+      position: absolute
+      left: 0
+      right: 0
+      width: 100%
+      height: 2px
+      background: $black
+
+    &::before
+      top: -7px
+
+    &::after
+      bottom: -7px
+
+.collection-swiper-pagination
+  display: none
+
+  .swiper-pagination-bullet
+    background: $white
+    opacity: 0.3
+    width: 6px
+    height: 6px
+
+
+
+  .swiper-pagination-bullet-active
+    opacity: 1
+    background: $white
+
+.swiper-container-horizontal .collection-swiper-pagination.swiper-pagination-bullets .swiper-pagination-bullet
+  margin: 0 6px
 
 .section-main-products
   margin-bottom: 100px
