--- a/scss/media.sass
+++ b/scss/media.sass
@@ -557,25 +557,25 @@
     margin-bottom: 15px
     padding-right: 0
 
-  .tabs-caption-item
-    font-size: 24px
-
   .products-card-desc
     padding-bottom: 0
 
-  .price-old
-    font-size: 16px
-
-  .price-new
-    font-size: 26px
-
   .products-size-item
-    width: 36px
+    width: 42px
+    font-size: 14px
 
-  .add-cart
-    width: 22px
-    height: 20px
+  .products-size-text
+    margin-top: 9px
+    font-size: 18px
 
+  .products-card-options.sale-price .products-card-size
+    margin-top: 15px
+
+  .products-card-size
+    margin-top: 15px
+
+  .products-card-options.sale-price .products-price-grid
+    margin-top: 10px
 
 @media screen and (max-width: 575px)
   .header-logo
@@ -599,7 +599,7 @@
     font-size: 14px
 
   .collection-swiper-bg
-    height: 260px
+    height: 290px
 
   .collection-nav-item
     flex: 0 0 calc(100% / 2)
@@ -649,7 +649,9 @@
     padding-left: 13px
 
 
-
+@media screen and (max-width: 330px)
+  .tabs-caption-item
+    font-size: 24px
 
 @media screen and (min-width: 1200px)
   .products-card-desc, .products-card-name a
