--- a/scss/media.sass
+++ b/scss/media.sass
@@ -648,6 +648,9 @@
   .header-cart
     padding-left: 13px
 
+  .products-card-name a
+    color: red
+
 
 @media screen and (max-width: 330px)
   .tabs-caption-item
