--- a/scss/media.sass
+++ b/scss/media.sass
@@ -599,7 +599,7 @@
     font-size: 14px
 
   .collection-swiper-bg
-    height: 290px
+    height: 320px
 
   .collection-nav-item
     flex: 0 0 calc(100% / 2)
@@ -648,13 +648,27 @@
   .header-cart
     padding-left: 13px
 
+  .products-size-item
+    height: 20px
+
+  .add-cart
+    width: 26px
+    height: 24px
+
   .products-card-name a
-    color: red
+    color: green
 
 
 @media screen and (max-width: 330px)
   .tabs-caption-item
     font-size: 24px
+
+  .products-size-item
+    height: 18px
+
+  .add-cart
+    width: 24px
+    height: 22px
 
 @media screen and (min-width: 1200px)
   .products-card-desc, .products-card-name a
