--- a/scss/media.sass
+++ b/scss/media.sass
@@ -655,8 +655,14 @@
     width: 26px
     height: 24px
 
+  .price-new
+    font-size: 32px
+
+  .price-old
+    font-size: 20px
+
   .products-card-name a
-    color: green
+    color: blue
 
 
 @media screen and (max-width: 330px)
@@ -669,6 +675,12 @@
   .add-cart
     width: 24px
     height: 22px
+
+  .price-new
+    font-size: 28px
+
+  .price-old
+    font-size: 18px
 
 @media screen and (min-width: 1200px)
   .products-card-desc, .products-card-name a
