--- a/scss/media.sass
+++ b/scss/media.sass
@@ -661,8 +661,13 @@
   .price-old
     font-size: 20px
 
-  .products-card-name a
-    color: blue
+  .products-card-name
+    font-size: 24px
+    margin-bottom: 5px
+
+  .products-card-caption
+    font-size: 16px
+
 
 
 @media screen and (max-width: 330px)
@@ -681,6 +686,12 @@
 
   .price-old
     font-size: 18px
+
+  .products-card-name
+    font-size: 22px
+
+  .products-card-caption
+    font-size: 14px
 
 @media screen and (min-width: 1200px)
   .products-card-desc, .products-card-name a
