--- a/scss/media.sass
+++ b/scss/media.sass
@@ -649,7 +649,9 @@
     padding-left: 13px
 
   .products-size-item
-    height: 20px
+    height: 18px
+    width: 46px
+    font-size: 16px
 
   .add-cart
     width: 26px
@@ -667,6 +669,9 @@
 
   .products-card-caption
     font-size: 16px
+
+  .products-card-name a
+    color: gray
 
 
 
