seacrh block and mobile menu

--- a/pug/modules/header.pug
+++ b/pug/modules/header.pug
@@ -11,11 +11,22 @@ header
                             span каталог
                             span.full-catalog-arrow
                     div.header-menu
+                        div.close-mobile-menu.cross-icon
+                        ul.mobile
+                            li
+                                a(href='#') каталог
                         ul
                             li
                                 a(href="#") компания
                             li
                                 a(href="#") новости
+                        ul.mobile
+                            li
+                                a(href="#") Поставщикам
+                            li
+                                a(href="#") Контакты
+                            li
+                                a(href="#") кабинет
                 div.header-center
                     div.header-logo
                         a(href='#')
