--- a/scss/main.sass
+++ b/scss/main.sass
@@ -10,30 +10,30 @@
 input::-webkit-input-placeholder, textarea::-webkit-input-placeholder
   opacity: 1
   transition: opacity 0.3s ease
-  color: $black
+  color: #bababa
   font-size: 16px
-  font-family: $ff_YK
+  font-family: $ff_CS
 
 input::-moz-placeholder, textarea::-moz-placeholder
   opacity: 1
   transition: opacity 0.3s ease
-  color: $black
+  color: #bababa
   font-size: 16px
-  font-family: $ff_YK
+  font-family: $ff_CS
 
 input:-moz-placeholder, textarea:-moz-placeholder
   opacity: 1
   transition: opacity 0.3s ease
-  color: $black
+  color: #bababa
   font-size: 16px
-  font-family: $ff_YK
+  font-family: $ff_CS
 
 input:-ms-input-placeholder, textarea:-ms-input-placeholder
   opacity: 1
   transition: opacity 0.3s ease
-  color: $black
+  color: #bababa
   font-size: 16px
-  font-family: $ff_YK
+  font-family: $ff_CS
 
 input:focus::-webkit-input-placeholder, textarea:focus::-webkit-input-placeholder
   opacity: 0
@@ -133,6 +133,9 @@ footer
       font-size: 24px
       text-transform: uppercase
       transition: all 0.2s ease-in-out
+
+  ul.mobile
+    display: none
 
 .header-search
   padding: 0 24px
@@ -508,9 +511,10 @@ footer
   justify-content: flex-start
   margin-left: -2px
   margin-right: -2px
+  flex-wrap: wrap
 
 .products-size-item
-  margin: 0 2px
+  margin: 2px
   height: 18px
   width: 46px
   display: flex
@@ -560,7 +564,8 @@ footer
   text-decoration: line-through
 
 .products-card-size
-  margin-top: 15px
+  margin-top: 14px
+  max-width: 60%
 
 .products-card-options.sale-price
   .products-card-size
@@ -784,8 +789,6 @@ footer
     width: 6px
     height: 6px
 
-
-
   .swiper-pagination-bullet-active
     opacity: 1
     background: $white
@@ -795,3 +798,117 @@ footer
 
 .section-main-products
   margin-bottom: 100px
+
+.search-block
+  position: absolute
+  left: 0
+  top: -300px
+  width: 100%
+  padding: 50px 0 55px
+  z-index: 6
+  background: $white
+  transition: all 0.6s ease
+
+  &.show
+    top: 0
+    transition: all 0.4s ease
+
+.search-form-row
+  position: relative
+
+.search-form-input
+  display: block
+  width: 100%
+  height: 40px
+  border: none
+  border-bottom: 1px solid #bababa
+  font-size: 16px
+  line-height: 18px
+  color: $black
+  font-family: $ff_CS
+  font-weight: $fw_300
+  background: #fff
+  padding: 0 35px
+
+.search-form-icon
+  position: absolute
+  left: 0
+  top: 0
+  bottom: 0
+  margin: auto
+  width: 17px
+  height: 17px
+  background: url(../icons/search.svg) no-repeat center
+  background-size: contain
+
+#search-form
+  padding: 0 40px
+
+.search-form-result
+  padding-top: 20px
+  padding-left: 35px
+  display: none
+
+  &.show
+    display: block
+
+.search-find-list a
+  font-size: 18px
+  line-height: 24px
+  font-weight: $fw_300
+  color: $black
+  font-family: $ff_CS
+  transition: all 0.2s ease-in-out
+
+.search-find-list > li:not(:last-child)
+  margin-bottom: 10px
+
+.close-search-block
+  position: absolute
+  right: 20px
+  top: 20px
+
+.cross-icon
+  width: 20px
+  height: 20px
+  cursor: pointer
+
+  &::before, &::after
+    content: ''
+    display: block
+    width: 100%
+    height: 2px
+    background: $black
+    position: absolute
+    left: 0
+    right: 0
+    top: 0
+    bottom: 0
+    margin: auto
+
+  &::before
+    transform: rotate(45deg)
+
+  &::after
+    transform: rotate(-45deg)
+
+.layout-bg
+  position: fixed
+  height: 100%
+  background: rgba(0,0,0,0)
+  top: 0
+  left: 0
+  width: 100%
+  z-index: -1
+  opacity: 0
+  visibility: hidden
+  transition: all .3s,background-color 1s
+
+  &.show
+    opacity: 1
+    visibility: visible
+    z-index: 5
+    background: rgba(0,0,0,0.4)
+
+.close-mobile-menu
+  display: none
