--- a/pug/templates/main.pug
+++ b/pug/templates/main.pug
@@ -19,6 +19,7 @@ html
         script(type="text/javascript" src="js/jquery-3.3.1.min.js")
         script(type="text/javascript" src="js/swiper.min.js")
         script(type="text/javascript" src="js/jquery.overlayScrollbars.min.js")
+        script(type="text/javascript" src="js/bodyScrollLock.js")
         script(type="text/javascript" src="dist/main.js")
 
     body
@@ -29,3 +30,4 @@ html
                 block content
 
             include ../modules/footer
+            include ../modules/search
