--- a/pug/modules/header.pug
+++ b/pug/modules/header.pug
@@ -27,6 +27,10 @@ header
                                 a(href="#") Контакты
                             li
                                 a(href="#") кабинет
+                            li
+                                a(href="#") Контакты
+                            li
+                                a(href="#") кабинет
                 div.header-center
                     div.header-logo
                         a(href='#')
