--- a/scss/media.sass
+++ b/scss/media.sass
@@ -62,6 +62,9 @@
     padding: 10px
     font-size: 14px
 
+  .all-content
+    padding-top: 82px
+
 
 @media screen and (max-width: 1439px)
   .header-right .header-menu > ul > li, .header-left .header-menu > ul > li
@@ -282,6 +285,9 @@
   .products-swiper-navigation
     top: -51px
 
+  .all-content
+    padding-top: 74px
+
 
 
 @media screen and (max-width: 1199px)
@@ -386,7 +392,6 @@
 
     &.open
       left: 0
-      //transition: all 0.5s ease
 
   .header-menu ul.mobile, .header-menu > ul
     display: block
@@ -408,6 +413,12 @@
     top: 15px
     width: 25px
     height: 25px
+
+  .all-content
+    padding-top: 57px
+
+  .header-section.on-scroll
+    padding: 7px 0
 
 
 @media screen and (max-width: 991px)
@@ -492,6 +503,9 @@
 
   .collection-nav-icon.shirt
     background-size: 38px auto
+
+  .all-content
+    padding-top: 55px
 
 @media screen and (max-width: 767px)
   .burger
@@ -636,7 +650,7 @@
   .search-form-result
     padding-left: 25px
 
-  .close-search-block::before, .close-search-block::after
+  .cross-icon::before, .cross-icon::after
     height: 1px
 
   .header-left .header-menu
@@ -653,6 +667,9 @@
 
   .header-menu > ul > li > a
     font-size: 20px
+
+  .all-content
+    padding-top: 53px
 
 
 
@@ -754,6 +771,11 @@
 
   .header-left .header-menu
     width: 280px
+
+  .all-content
+    padding-top: 50px
+
+
 
 
 
