mobile-menu, popup added, large catalog

--- a/pug/modules/header.pug
+++ b/pug/modules/header.pug
@@ -7,30 +7,60 @@ header
                         div.burger
                             span
                     div.header-catalog
-                        a#full-catalog(href="#")
-                            span каталог
-                            span.full-catalog-arrow
+                        div.full-catalog-link
+                            a#full-catalog.full-catalog(href="#")
+                                div.full-catalog-btn
+                                    span каталог
+                                    span.full-catalog-arrow
+                            div.large-catalog
+                                div.container
+                                    div.large-catalog-grid
+                                        div.large-catalog-item
+                                            a.sale(href="#") Распродажа
+                                        div.large-catalog-item
+                                            a(href="#") Блузки
+                                        div.large-catalog-item
+                                            a(href="#") Рубашки
+                                        div.large-catalog-item
+                                            a(href="#") Футболки и топы
+                                        div.large-catalog-item
+                                            a(href="#") Платья
+                                        div.large-catalog-item
+                                            a(href="#") Пиджаки
+                                        div.large-catalog-item
+                                            a(href="#") Костюмы
+                                        div.large-catalog-item
+                                            a(href="#") Кардиганы
+                                        div.large-catalog-item
+                                            a(href="#") Джемперы
+                                        div.large-catalog-item
+                                            a(href="#") Джинсы
+                                        div.large-catalog-item
+                                            a(href="#") Брюки
+                                        div.large-catalog-item
+                                            a(href="#") Юбки
+                                        div.large-catalog-item
+                                            a(href="#") Шорты
+                                        div.large-catalog-item
+                                            a(href="#") Куртки
+                                        div.large-catalog-item
+                                            a(href="#") Пальто
+                                        div.large-catalog-item
+                                            a(href="#") Плащи
+                                        div.large-catalog-item
+                                            a(href="#") Шубы
+                                        div.large-catalog-item
+                                            a(href="#") Шарфы и палантины
+                                        div.large-catalog-item
+                                            a(href="#") Головные уборы
+                                        div.large-catalog-item
+                                            a(href="#") Аксессуары
                     div.header-menu
-                        div.close-mobile-menu.cross-icon
-                        ul.mobile
-                            li
-                                a(href='#') каталог
                         ul
                             li
                                 a(href="#") компания
                             li
                                 a(href="#") новости
-                        ul.mobile
-                            li
-                                a(href="#") Поставщикам
-                            li
-                                a(href="#") Контакты
-                            li
-                                a(href="#") кабинет
-                            li
-                                a(href="#") Контакты
-                            li
-                                a(href="#") кабинет
                 div.header-center
                     div.header-logo
                         a(href='#')
@@ -49,3 +79,5 @@ header
                     div.header-cart
                         a.header-cart-link(href="#")
                             span.header-cart-count
+    div.large-catalog-bg
+
