--- a/pug/templates/main.pug
+++ b/pug/templates/main.pug
@@ -31,3 +31,5 @@ html
 
             include ../modules/footer
             include ../modules/search
+            include ../modules/mobile-menu
+            include ../modules/popup-add-cart
