fix bag scroll tabs and mobile menu

--- a/scss/main.sass
+++ b/scss/main.sass
@@ -396,6 +396,8 @@ footer
 .products-tabs-caption
   margin-bottom: 30px
   padding-right: 150px
+  padding-top: 3px
+  padding-bottom: 3px
 
   .os-content
     display: flex
